# elt-elecciones

./: .editorconfig  .gitignore  .ignore  .pre-commit-config.yaml  .shellcheckrc  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  stylelint.config.js
back/: exceptions.py  main.py  myconfig.py  pyproject.toml
back/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
back/dbt_project/models/: sources.yml
back/dbt_project/models/analytics/: candidatos.sql
back/dbt_project/models/cleaned/: schema.yml
back/downloader/: main.py
back/elt_tests/: test_defs.py
back/etl/: __init__.py
back/etl/assets/: dbt_assets.py  elecciones.py
back/parser/: main.py  parser_utils.py
back/scrapper/: infoelectoral_utils.py  main.py  requests_utils.py
back/tests/: test_scrapper.py
back/tests/golden/: listado_mesa_congreso.json  listado_mesa_todas.json
back/utils/: dict_utils.py  zip_processor.py
config/: pyproject.toml
notebooks/: 00_base.ipynb  01_urls.ipynb  02_listados.ipynb  03_descargar.ipynb  04_parsear.ipynb
scripts/: install.sh  test.sh  variables.ini
scripts/util/: check-os-deps.sh  install.sh  setup-custom.sh
talk/: README.md  index.html
