[tool.dagster]
module_name = "back.etl"

[tool.pyright]
executionEnvironments = [{ root = "back" }]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
python_files = ["test_*.py"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
pythonpath = "back"

[tool.coverage.run]
omit = ["manage.py"]


[build-system]
requires = ["setuptools==65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elecciones"
version = "0.0.1"
authors = [{ name = "iCarto", email = "info@icarto.es" }]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Private :: Do Not Upload",
]
requires-python = "==3.11.*"
dependencies = [
    "pandas==2.2.0",
    "pyarrow==15.0.0",
    "requests==2.31.0",
    "sqlalchemy==2.0.27",
    "psycopg2-binary==2.9.9",
    "dagster==1.6.4",
    "dagster-webserver==1.6.4",
    "dagster-postgres==0.22.4",
    "matplotlib==3.8.3",
    "dagster-dbt==0.22.4",
    "dbt-postgres==1.7.8",
]

# https://stackoverflow.com/questions/75490231/
[project.optional-dependencies]
test = ["pytest==8.0.0", "pytest-cov==4.1.0", "deepdiff==6.7.1"]
dev = ["jupyterlab==4.1.1"]

all = ["elecciones[dev, test]"]


[tool.setuptools]
package-dir = { "elecciones" = "back" }
include-package-data = true

[tool.setuptools.package-data]
# *.css *.woff *.svg *.js *.gif *.ico *.png *.jpg *.html *.js.map
"elecciones.static" = ["**"]
"elecciones.templates" = ["**"]

[tool.ruff]
extend = "./config/pyproject.toml"

[tool.ruff.lint]
extend-ignore = ["ANN", "ERA", "TCH"]

[tool.ruff.per-file-ignores]
"/**/etl_tests/*" = ["S101", "S105", "PLR2004"]
